[package]
name = "belenios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "3.2.1"
rand_core = "0.5.1" # must match with curve25519-dalek
sha3 = "0.9.1" # must match curve25519-dalek
thiserror = "1"

[dev-dependencies]
rand_chacha = "0.2.2" # must match with rand_core
quickcheck = "1"
quickcheck_macros = "1"
clap = { version = "3", features = ["derive"] }